Add RootController, NamedRoutes, FlashUtil. Update App